--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "318e1c5a-ef70-4293-904b-e52d9c04a9a4"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
